доисправлена файловая структура

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
                 <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
                     <a href="" class="header__link">Узнать &xrarr;</a>
                 </p>
-                <div class="header__main-illustration" >
-                    <img src="./blocks/header/__main-illustration/images/header-image.png" alt="Фрагмент картины Ф.Решетникова 'Опять двойка'">
-                </div>
+                <img class="header__main-illustration" src="./blocks/header/__main-illustration/images/header-image.png" alt="Фрагмент картины Ф.Решетникова 'Опять двойка'">
                 <div class="header__square-pic rotation"></div>
             </header>
         <main class="content">
@@ -37,27 +35,27 @@
                 <p class="section-subtitle">Пять практик от Барбары Оакли</p>
                 <div class="cards">
                     <div class="cards__item">
-                        <img class="cards__image" src="./blocks/content/techniques/cards/__image/images/cards-attention.png" alt="Обложка книги '101 эссе, которые изменят ваш стиль мышления'">
+                        <img class="cards__image" src="./blocks/techniques/cards/__image/images/cards-attention.png" alt="Обложка книги '101 эссе, которые изменят ваш стиль мышления'">
                         <h3 class="cards__title">Два вида внимания</h3>
                         <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
                     </div>
                     <div class="cards__item">
-                        <img class="cards__image" src="./blocks/content/techniques/cards/__image/images/cards-recall.png" alt="Фотография античной скульптуры задумавшегося мальчика">
+                        <img class="cards__image" src="./blocks/techniques/cards/__image/images/cards-recall.png" alt="Фотография античной скульптуры задумавшегося мальчика">
                         <h3 class="cards__title">Recall</h3>
                         <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
                     </div>
                     <div class="cards__item">
-                        <img class="cards__image" src="./blocks/content/techniques/cards/__image/images/cards-interliving.png" alt="Фотография холла офисного центра в футуристическом стиле">
+                        <img class="cards__image" src="./blocks/techniques/cards/__image/images/cards-interliving.png" alt="Фотография холла офисного центра в футуристическом стиле">
                         <h3 class="cards__title">Интерливинг</h3>
                         <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
                     </div>
                     <div class="cards__item">
-                        <img class="cards__image" src="./blocks/content/techniques/cards/__image/images/cards-question.png" alt="Фотография внутренного дворика офисного центра в футуристическом стиле">
+                        <img class="cards__image" src="./blocks/techniques/cards/__image/images/cards-question.png" alt="Фотография внутренного дворика офисного центра в футуристическом стиле">
                         <h3 class="cards__title">Вопросы</h3>
                         <p class="cards__description">Слушая преподавателя, придумайте хороший вопрос, который вас действительно волнует.</p>
                     </div>
                     <div class="cards__item">
-                        <img class="cards__image" src="./blocks/content/techniques/cards/__image/images/cards-competence.png" alt="Концептуальное фото стопки книг, удерживаемых одной рукой">
+                        <img class="cards__image" src="./blocks/techniques/cards/__image/images/cards-competence.png" alt="Концептуальное фото стопки книг, удерживаемых одной рукой">
                         <h3 class="cards__title">Иллюзия компетентности</h3>
                         <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
                     </div>
@@ -83,9 +81,7 @@
                 <h2 class="feynman__title">Метод Фейнмана</h2>
                 <p class="feynman__subtitle">Выучить и не забыть</p>
                 <a href="" class="feynman__link">Подробнее &xrarr;</a>
-                <div class="feynman__illustration"> 
-                <img src="../first_project/blocks/content/feynman/image/feynman.png" alt="Портрет Фейнмана">
-                </div>
+                <img class="feynman__illustration" src="./blocks/feynman/image/feynman.png" alt="Портрет Фейнмана">
             </section>
             <section class="digits">
                 <h2 class="section-title">Цифры и факты</h2>
@@ -135,9 +131,7 @@
                     <h3 class="khan__quote-author">Джордж Лукас</h3>
                     <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
                     <div class="khan__book_container">
-                        <div class="khan__book-pic">
-                            <img src="./blocks/content/khan/__book-pic/images/khan-book.jpg" alt="Обложка книги Салмана Хана 'Весь мир - школа'">
-                        </div>
+                        <img class="khan__book-pic" src="./blocks/khan/__book-pic/images/khan-book.jpg" alt="Обложка книги Салмана Хана 'Весь мир - школа'">
                         <a href="" class="khan__buy-link">Купить книгу &xrarr;</a>
                     </div>
                 </div>
@@ -194,41 +188,41 @@
                 <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p> 
                 <div class="resourses__logo_zone">
                     <a class="resourses__link" href="#">
-                        <img class="resources__logo" src="./blocks/content/resourses/__logo/images/resources-arzamas.svg" alt="Ссылка на образовательный ресурс Arzamas">
+                        <img class="resources__logo" src="blocks/resourses/__logo/images/resources-arzamas.svg" alt="Ссылка на образовательный ресурс Arzamas">
                     </a>
                     <a class="resourses__link" href="#">
-                        <img class="resources__logo" src="./blocks/content/resourses/__logo/images/resources-n1.svg" alt="Ссылка на образовательный ресурс N+1">
+                        <img class="resources__logo" src="./blocks/resourses/__logo/images/resources-n1.svg" alt="Ссылка на образовательный ресурс N+1">
                     </a>
                     <a class="resourses__link" href="#">
-                        <img class="resources__logo" src="./blocks/content/resourses/__logo/images/resources-strelka.svg" alt="Ссылка на образовательный ресурс STRELKA">
+                        <img class="resources__logo" src="./blocks/resourses/__logo/images/resources-strelka.svg" alt="Ссылка на образовательный ресурс STRELKA">
                     </a>
                     <a class="resourses__link" href="#">
-                        <img class="resources__logo" src="./blocks/content/resourses/__logo/images/resources-polka.svg" alt="Ссылка на образовательный ресурс ПОЛКА">
+                        <img class="resources__logo" src="./blocks/resourses/__logo/images/resources-polka.svg" alt="Ссылка на образовательный ресурс ПОЛКА">
                     </a>
                 </div>
             </section>
         </main>
         <footer class="footer">
             <div class="footer__columns">
-                <div class="footer__column_content_copyright">
+                <div class="footer__column footer__column_content_copyright">
                     <div class="logo logo_place_footer"></div>
                     <p class="footer__author">© Виктор Абанькин</p>
                 </div>
-                <div class="footer__column_content_info">
+                <div class="footer__column footer__column_content_info">
                     <h3 class="footer__column-heading">О Практикуме</h3>
-                    <div class="footer__column-links">
+                    <nav class="footer__column-links">
                         <a href="#" class="footer__column-link">Главная</a>
                         <a href="#" class="footer__column-link">Концепция</a>
-                        <a href="#" class="footer__column-link">Наставники</a>
-                    </div>
+                        <a href="#" class="footer__column-link">Наставники</a>                        
+                    </nav>
                 </div>
-                <div class="footer__column_content_social">
+                <div class="footer__column footer__column_content_social">
                     <h3 class="footer__column-heading">Соцсети</h3>
-                    <div class="footer__column-links">
+                    <nav class="footer__column-links">
                         <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./blocks/footer/__social-icon/images/youtube-icon.svg" alt="Сыллка на портал YouTube"> YouTube </a>
                         <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./blocks/footer/__social-icon/images/vk_color_white.svg" alt="Ссылка на социальную сеть ВКонтакте"> ВКонтакте</a>
                         <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./blocks/footer/__social-icon/images/tiktok-icon.svg" alt="Ссылка на социальную сеть TikTok"> TikTok</a>
-                    </div>
+                    </nav>
                 </div>
             </div>        
         </footer>
