--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
                 <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
                     <a href="" class="header__link">Узнать &xrarr;</a>
                 </p>
-                <img class="header__main-illustration" src="./blocks/header/__main-illustration/images/header-image.png" alt="Фрагмент картины Ф.Решетникова 'Опять двойка'">
+                <img class="header__main-illustration" src="./images/header-image.png" alt="Фрагмент картины Ф.Решетникова 'Опять двойка'">
                 <div class="header__square-pic rotation"></div>
             </header>
         <main class="content">
             <section class="description">
                 <div class="two-columns">
-                    <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+                    <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
                     <div class="two-columns__main-text">
                         <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
                         <p class="two-columns__paragraph">
@@ -35,27 +35,27 @@
                 <p class="section-subtitle">Пять практик от Барбары Оакли</p>
                 <div class="cards">
                     <div class="cards__item">
-                        <img class="cards__image" src="./blocks/techniques/cards/__image/images/cards-attention.png" alt="Обложка книги '101 эссе, которые изменят ваш стиль мышления'">
+                        <img class="cards__image" src="./images/cards-attention.png" alt="Обложка книги '101 эссе, которые изменят ваш стиль мышления'">
                         <h3 class="cards__title">Два вида внимания</h3>
                         <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
                     </div>
                     <div class="cards__item">
-                        <img class="cards__image" src="./blocks/techniques/cards/__image/images/cards-recall.png" alt="Фотография античной скульптуры задумавшегося мальчика">
+                        <img class="cards__image" src="./images/cards-recall.png" alt="Фотография античной скульптуры задумавшегося мальчика">
                         <h3 class="cards__title">Recall</h3>
                         <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
                     </div>
                     <div class="cards__item">
-                        <img class="cards__image" src="./blocks/techniques/cards/__image/images/cards-interliving.png" alt="Фотография холла офисного центра в футуристическом стиле">
+                        <img class="cards__image" src="./images/cards-interliving.png" alt="Фотография холла офисного центра в футуристическом стиле">
                         <h3 class="cards__title">Интерливинг</h3>
                         <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
                     </div>
                     <div class="cards__item">
-                        <img class="cards__image" src="./blocks/techniques/cards/__image/images/cards-question.png" alt="Фотография внутренного дворика офисного центра в футуристическом стиле">
+                        <img class="cards__image" src="./images/cards-question.png" alt="Фотография внутренного дворика офисного центра в футуристическом стиле">
                         <h3 class="cards__title">Вопросы</h3>
                         <p class="cards__description">Слушая преподавателя, придумайте хороший вопрос, который вас действительно волнует.</p>
                     </div>
                     <div class="cards__item">
-                        <img class="cards__image" src="./blocks/techniques/cards/__image/images/cards-competence.png" alt="Концептуальное фото стопки книг, удерживаемых одной рукой">
+                        <img class="cards__image" src="./images/cards-competence.png" alt="Концептуальное фото стопки книг, удерживаемых одной рукой">
                         <h3 class="cards__title">Иллюзия компетентности</h3>
                         <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
                     </div>
@@ -81,7 +81,7 @@
                 <h2 class="feynman__title">Метод Фейнмана</h2>
                 <p class="feynman__subtitle">Выучить и не забыть</p>
                 <a href="" class="feynman__link">Подробнее &xrarr;</a>
-                <img class="feynman__illustration" src="./blocks/feynman/__illustration/image/feynman.png" alt="Портрет Фейнмана">
+                <img class="feynman__illustration" src="./images/feynman.png" alt="Портрет Фейнмана">
             </section>
             <section class="digits">
                 <h2 class="section-title">Цифры и факты</h2>
@@ -131,7 +131,7 @@
                     <h3 class="khan__quote-author">Джордж Лукас</h3>
                     <p class="khan__quote-author-subline">Кинорежиссёр, продюсер</p>
                     <div class="khan__book-container">
-                        <img class="khan__book-pic" src="./blocks/khan/__book-pic/images/khan-book.jpg" alt="Обложка книги Салмана Хана 'Весь мир - школа'">
+                        <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги Салмана Хана 'Весь мир - школа'">
                         <a href="" class="khan__buy-link">Купить книгу &xrarr;</a>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                         <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
                     </div>
                     <div class="table__cell table__cell_theme_dark">
-                        <h3 class="cell_heading cell_heading_dark">10</h3>
+                        <h3 class="table__heading table__heading_theme_dark">10</h3>
                         <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
                     </div>
                 </div>
@@ -186,18 +186,18 @@
             <section class="resources">
                 <h2 class="section-title">Полезные ресурсы</h2>
                 <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p> 
-                <div class="resources__logo_zone">
+                <div class="resources__logo-zone">
                     <a class="resources__link" href="#">
-                        <img class="resources__logo" src="./blocks/resources/__logo/images/resources-arzamas.svg" alt="Ссылка на образовательный ресурс Arzamas">
+                        <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Ссылка на образовательный ресурс Arzamas">
                     </a>
                     <a class="resources__link" href="#">
-                        <img class="resources__logo" src="./blocks/resources/__logo/images/resources-n1.svg" alt="Ссылка на образовательный ресурс N+1">
+                        <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Ссылка на образовательный ресурс N+1">
                     </a>
                     <a class="resources__link" href="#">
-                        <img class="resources__logo" src="./blocks/resources/__logo/images/resources-strelka.svg" alt="Ссылка на образовательный ресурс STRELKA">
+                        <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Ссылка на образовательный ресурс STRELKA">
                     </a>
                     <a class="resources__link" href="#">
-                        <img class="resources__logo" src="./blocks/resources/__logo/images/resources-polka.svg" alt="Ссылка на образовательный ресурс ПОЛКА">
+                        <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Ссылка на образовательный ресурс ПОЛКА">
                     </a>
                 </div>
             </section>
@@ -219,9 +219,9 @@
                 <div class="footer__column footer__column_content_social">
                     <h3 class="footer__column-heading">Соцсети</h3>
                     <nav class="footer__column-links">
-                        <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./blocks/footer/__social-icon/images/youtube-icon.svg" alt="Сыллка на портал YouTube"> YouTube </a>
-                        <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./blocks/footer/__social-icon/images/vk_color_white.svg" alt="Ссылка на социальную сеть ВКонтакте"> ВКонтакте</a>
-                        <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./blocks/footer/__social-icon/images/tiktok-icon.svg" alt="Ссылка на социальную сеть TikTok"> TikTok</a>
+                        <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Сыллка на портал YouTube"> YouTube </a>
+                        <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Ссылка на социальную сеть ВКонтакте"> ВКонтакте</a>
+                        <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="Ссылка на социальную сеть TikTok"> TikTok</a>
                     </nav>
                 </div>
             </div>        
